--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "axios": "^1.7.7",
+    "mapbox-gl": "^3.8.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "eslint": "^8",
